Add some growth model physics papers

--- a/All.bib
+++ b/All.bib
@@ -6,8 +6,8 @@
 % Emails: chenle02 AT gmail.com
 %         le.chen AT auburn.edu
 % Github: https://github.com/chenle02/SPDEs-Bib.git
-% Commit: d251034d697c6602f0eaa19bc3da2b7a879e014d
-% Date: 2023-10-03
+% Commit: d9b5a0be0c4995d172dc028aba549b2c9ecf0e2e
+% Date: 2023-10-04
 % ---------------------------
 
 
@@ -51004,6 +51004,20 @@
   doi           = {10.1007/BF02414375},
   url           = {https://doi.org/10.1007/BF02414375}
 }
+@article{tamborenea.das-sarma:93:surface-diffusion-driven,
+  title         = {Surface-diffusion-driven kinetic growth on one-dimensional substrates},
+  author        = {Tamborenea, P. I. and Das Sarma, S.},
+  journal       = {Phys. Rev. E},
+  volume        = {48},
+  issue         = {4},
+  pages         = {2575--2594},
+  numpages      = {0},
+  year          = {1993},
+  month         = {Oct},
+  publisher     = {American Physical Society},
+  doi           = {10.1103/PhysRevE.48.2575},
+  url           = {https://link.aps.org/doi/10.1103/PhysRevE.48.2575}
+}
 @article{tang.tsai:18:optimal,
   author        = {Tang, Wenpin and Tsai, Li-Cheng},
   title         = {Optimal surviving strategy for drifted {B}rownian motions with absorption},
@@ -55267,7 +55281,7 @@
   number        = {3},
   pages         = {383--389},
   year          = {1992},
-  issn          = {0378-4371},
+  issn          = {0378--4371},
   doi           = {https://doi.org/10.1016/0378-4371(92)90050-Z},
   url           = {https://www.sciencedirect.com/science/article/pii/037843719290050Z}
 }
@@ -55524,6 +55538,20 @@
   mrnumber      = {3983045},
   doi           = {10.1016/j.jde.2019.05.008},
   url           = {https://doi.org/10.1016/j.jde.2019.05.008}
+}
+@article{zhang:90:replica,
+  title         = {Replica scaling analysis of interfaces in random media},
+  author        = {Zhang, Yi-Cheng},
+  journal       = {Phys. Rev. B},
+  volume        = {42},
+  issue         = {7},
+  pages         = {4897--4900},
+  numpages      = {0},
+  year          = {1990},
+  month         = {Sep},
+  publisher     = {American Physical Society},
+  doi           = {10.1103/PhysRevB.42.4897},
+  url           = {https://link.aps.org/doi/10.1103/PhysRevB.42.4897}
 }
 @article{zheng.zhai.ea:18:moderate,
   author        = {Zheng, Wuting and Zhai, Jianliang and Zhang, Tusheng},
