Add some physics papers on surface growth

--- a/All.bib
+++ b/All.bib
@@ -6,8 +6,8 @@
 % Emails: chenle02 AT gmail.com
 %         le.chen AT auburn.edu
 % Github: https://github.com/chenle02/SPDEs-Bib.git
-% Commit: 5a59b503040cbc37fbe39b5a90f33dbdd03db42e
-% Date: 2023-10-28
+% Commit: 410582b88ebce5aaa51fe075472bbc7fefca9a06
+% Date: 2023-10-29
 % ---------------------------
 
 
@@ -2188,6 +2188,20 @@
   mrreviewer    = {Monique Pontier},
   doi           = {10.1007/978-0-387-76896-0},
   url           = {https://doi.org/10.1007/978-0-387-76896-0}
+}
+@article{baiod.kessler.ea:88:dynamical,
+  title         = {Dynamical scaling of the surface of finite-density ballistic aggregation},
+  author        = {Baiod, R. and Kessler, D. and Ramanlal, P. and Sander, L. and Savit, R.},
+  journal       = {Phys. Rev. A},
+  volume        = {38},
+  issue         = {7},
+  pages         = {3672--3679},
+  numpages      = {0},
+  year          = {1988},
+  month         = {Oct},
+  publisher     = {American Physical Society},
+  doi           = {10.1103/PhysRevA.38.3672},
+  url           = {https://link.aps.org/doi/10.1103/PhysRevA.38.3672}
 }
 @article{bakhtin.mueller:10:solutions,
   author        = {Bakhtin, Yuri and Mueller, Carl},
@@ -8346,6 +8360,17 @@
   mrclass       = {76.1X},
   mrnumber      = {0027195},
   mrreviewer    = {C. C. Lin}
+}
+@book{burgers:74:nonlinear,
+  author        = {Burgers, Johannes Martinus},
+  title         = {The nonlinear diffusion equation},
+  note          = {asymptotic solutions and statistical problems},
+  publisher     = {Springer Science+Business Media Dordrecht},
+  year          = {1974},
+  pages         = {x+174},
+  isbn          = {978-90-277-0494-8},
+  doi           = {10.1007/978-94-010-1745-9},
+  url           = {https://doi.org/10.1007/978-94-010-1745-9}
 }
 @inproceedings{burkholder.davis.ea:72:integral,
   author        = {Burkholder, D. L. and Davis, B. J. and Gundy, R. F.},
@@ -16035,22 +16060,6 @@
 }
 @article{dalang:88:on,
   author        = {Dalang, Robert C.},
-  title         = {On stopping points in the plane that lie on a unique optional increasing path},
-  journal       = {Stochastics},
-  fjournal      = {Stochastics},
-  volume        = {24},
-  year          = {1988},
-  number        = {3},
-  pages         = {245--268},
-  issn          = {0090-9491},
-  mrclass       = {60G07 (90C40)},
-  mrnumber      = {972476},
-  mrreviewer    = {Nicholas Frangos},
-  doi           = {10.1080/17442508808833517},
-  url           = {https://doi.org/10.1080/17442508808833517}
-}
-@article{dalang:88:on*1,
-  author        = {Dalang, Robert C.},
   title         = {On infinite perfect graphs and randomized stopping points on the plane},
   journal       = {Probab. Theory Related Fields},
   fjournal      = {Probability Theory and Related Fields},
@@ -16064,6 +16073,22 @@
   mrreviewer    = {U. Krengel},
   doi           = {10.1007/BF00334200},
   url           = {https://doi.org/10.1007/BF00334200}
+}
+@article{dalang:88:on*1,
+  author        = {Dalang, Robert C.},
+  title         = {On stopping points in the plane that lie on a unique optional increasing path},
+  journal       = {Stochastics},
+  fjournal      = {Stochastics},
+  volume        = {24},
+  year          = {1988},
+  number        = {3},
+  pages         = {245--268},
+  issn          = {0090-9491},
+  mrclass       = {60G07 (90C40)},
+  mrnumber      = {972476},
+  mrreviewer    = {Nicholas Frangos},
+  doi           = {10.1080/17442508808833517},
+  url           = {https://doi.org/10.1080/17442508808833517}
 }
 @article{dalang:89:optimal,
   author        = {Dalang, Robert C.},
@@ -16518,6 +16543,21 @@
 }
 @article{dawson.etheridge.ea:02:mutually,
   author        = {Dawson, Donald A. and Etheridge, Alison M. and Fleischmann, Klaus and Mytnik, Leonid and Perkins, Edwin A. and Xiong, Jie},
+  title         = {Mutually catalytic branching in the plane: infinite measure states},
+  journal       = {Electron. J. Probab.},
+  fjournal      = {Electronic Journal of Probability},
+  volume        = {7},
+  year          = {2002},
+  pages         = {No. 15, 61},
+  issn          = {1083-6489},
+  mrclass       = {60K35 (60G57 60J80)},
+  mrnumber      = {1921744},
+  mrreviewer    = {Achim Klenke},
+  doi           = {10.1214/EJP.v7-114},
+  url           = {https://doi.org/10.1214/EJP.v7-114}
+}
+@article{dawson.etheridge.ea:02:mutually*1,
+  author        = {Dawson, Donald A. and Etheridge, Alison M. and Fleischmann, Klaus and Mytnik, Leonid and Perkins, Edwin A. and Xiong, Jie},
   title         = {Mutually catalytic branching in the plane: finite measure states},
   journal       = {Ann. Probab.},
   fjournal      = {The Annals of Probability},
@@ -16531,21 +16571,6 @@
   mrreviewer    = {Roger Tribe},
   doi           = {10.1214/aop/1039548370},
   url           = {https://doi.org/10.1214/aop/1039548370}
-}
-@article{dawson.etheridge.ea:02:mutually*1,
-  author        = {Dawson, Donald A. and Etheridge, Alison M. and Fleischmann, Klaus and Mytnik, Leonid and Perkins, Edwin A. and Xiong, Jie},
-  title         = {Mutually catalytic branching in the plane: infinite measure states},
-  journal       = {Electron. J. Probab.},
-  fjournal      = {Electronic Journal of Probability},
-  volume        = {7},
-  year          = {2002},
-  pages         = {No. 15, 61},
-  issn          = {1083-6489},
-  mrclass       = {60K35 (60G57 60J80)},
-  mrnumber      = {1921744},
-  mrreviewer    = {Achim Klenke},
-  doi           = {10.1214/EJP.v7-114},
-  url           = {https://doi.org/10.1214/EJP.v7-114}
 }
 @article{dawson.feng:01:large,
   author        = {Dawson, Donald A. and Feng, Shui},
@@ -19613,6 +19638,19 @@
   doi           = {10.1017/CBO9780511662201},
   url           = {https://doi.org/10.1017/CBO9780511662201}
 }
+@article{edwards.wilkinson:82:surface,
+  author        = {Edwards, Samuel Frederick and Wilkinson, D. R.},
+  title         = {The surface statistics of a granular aggregate},
+  journal       = {Proc. R. Soc. London A},
+  fjournal      = {Proceedings of the Royal Society of London. A. Mathematical and Physical Sciences},
+  volume        = {381},
+  number        = {1780},
+  pages         = {17--31},
+  year          = {1982},
+  doi           = {10.1098/rspa.1982.0056},
+  url           = {https://royalsocietypublishing.org/doi/abs/10.1098/rspa.1982.0056},
+  eprint        = {https://royalsocietypublishing.org/doi/pdf/10.1098/rspa.1982.0056}
+}
 @article{edwards:65:statistical,
   author        = {Edwards, S. F.},
   title         = {The statistical mechanics of polymers with excluded volume},
@@ -20243,6 +20281,19 @@
   isbn          = {9780444596581},
   year          = {1984},
   publisher     = {North-Holland}
+}
+@article{family:86:scaling,
+  doi           = {10.1088/0305-4470/19/8/006},
+  url           = {https://dx.doi.org/10.1088/0305-4470/19/8/006},
+  year          = {1986},
+  month         = {June},
+  publisher     = {},
+  volume        = {19},
+  number        = {8},
+  pages         = {L441},
+  author        = {Family, Fereydoon},
+  title         = {Scaling of rough surfaces: effects of surface diffusion},
+  journal       = {Journal of Physics A: Mathematical and General}
 }
 @article{fan:97:sur,
   author        = {Fan, Ai Hua},
@@ -26168,16 +26219,6 @@
 @inproceedings{hairer:14:singular,
   author        = {Hairer, Martin},
   title         = {Singular stochastic {PDE}s},
-  booktitle     = {Proceedings of the {I}nternational {C}ongress of {M}athematicians---{S}eoul 2014. {V}ol. {IV}},
-  pages         = {49--73},
-  publisher     = {Kyung Moon Sa, Seoul},
-  year          = {2014},
-  mrclass       = {60H15 (81S20 82C28)},
-  mrnumber      = {3727602}
-}
-@inproceedings{hairer:14:singular*1,
-  author        = {Hairer, Martin},
-  title         = {Singular stochastic {PDE}s},
   booktitle     = {Proceedings of the {I}nternational {C}ongress of {M}athematicians---{S}eoul 2014. {V}ol. 1},
   pages         = {685--709},
   publisher     = {Kyung Moon Sa, Seoul},
@@ -26185,6 +26226,16 @@
   mrclass       = {60H15 (81S20 82C28)},
   mrnumber      = {3728488},
   mrreviewer    = {Peter Karl Friz}
+}
+@inproceedings{hairer:14:singular*1,
+  author        = {Hairer, Martin},
+  title         = {Singular stochastic {PDE}s},
+  booktitle     = {Proceedings of the {I}nternational {C}ongress of {M}athematicians---{S}eoul 2014. {V}ol. {IV}},
+  pages         = {49--73},
+  publisher     = {Kyung Moon Sa, Seoul},
+  year          = {2014},
+  mrclass       = {60H15 (81S20 82C28)},
+  mrnumber      = {3727602}
 }
 @incollection{hairer:14:solving,
   author        = {Hairer, M.},
@@ -26459,7 +26510,23 @@
   mrnumber      = {1294070},
   url           = {http://links.jstor.org/sici?sici=0162-1459(199406)89:426<368:AATSSM>2.0.CO;2-Z\&origin=MSN}
 }
-@incollection{hara.slade:00:scaling,
+@article{hara.slade:00:scaling,
+  author        = {Hara, Takashi and Slade, Gordon},
+  title         = {The scaling limit of the incipient infinite cluster in high-dimensional percolation. {I}. {C}ritical exponents},
+  journal       = {J. Statist. Phys.},
+  fjournal      = {Journal of Statistical Physics},
+  volume        = {99},
+  year          = {2000},
+  number        = {5-6},
+  pages         = {1075--1168},
+  issn          = {0022-4715},
+  mrclass       = {82B43 (60K35)},
+  mrnumber      = {1773141},
+  mrreviewer    = {Remco van der Hofstad},
+  doi           = {10.1023/A:1018628503898},
+  url           = {https://doi.org/10.1023/A:1018628503898}
+}
+@incollection{hara.slade:00:scaling*1,
   author        = {Hara, Takashi and Slade, Gordon},
   title         = {The scaling limit of the incipient infinite cluster in high-dimensional percolation. {II}. {I}ntegrated super-{B}rownian excursion},
   note          = {Probabilistic techniques in equilibrium and nonequilibrium statistical physics},
@@ -26475,22 +26542,6 @@
   mrreviewer    = {Remco van der Hofstad},
   doi           = {10.1063/1.533186},
   url           = {https://doi.org/10.1063/1.533186}
-}
-@article{hara.slade:00:scaling*1,
-  author        = {Hara, Takashi and Slade, Gordon},
-  title         = {The scaling limit of the incipient infinite cluster in high-dimensional percolation. {I}. {C}ritical exponents},
-  journal       = {J. Statist. Phys.},
-  fjournal      = {Journal of Statistical Physics},
-  volume        = {99},
-  year          = {2000},
-  number        = {5-6},
-  pages         = {1075--1168},
-  issn          = {0022-4715},
-  mrclass       = {82B43 (60K35)},
-  mrnumber      = {1773141},
-  mrreviewer    = {Remco van der Hofstad},
-  doi           = {10.1023/A:1018628503898},
-  url           = {https://doi.org/10.1023/A:1018628503898}
 }
 @article{hara.slade:91:critical,
   author        = {Hara, Takashi and Slade, Gordon},
@@ -29743,22 +29794,6 @@
 }
 @article{huang.le.ea:17:large,
   author        = {Huang, Jingyu and L\^{e}, Khoa and Nualart, David},
-  title         = {Large time asymptotics for the parabolic {A}nderson model driven by spatially correlated noise},
-  journal       = {Ann. Inst. Henri Poincar\'{e} Probab. Stat.},
-  fjournal      = {Annales de l'Institut Henri Poincar\'{e} Probabilit\'{e}s et Statistiques},
-  volume        = {53},
-  year          = {2017},
-  number        = {3},
-  pages         = {1305--1340},
-  issn          = {0246-0203},
-  mrclass       = {60G15 (60F10 60H07 60H15 65M75)},
-  mrnumber      = {3689969},
-  mrreviewer    = {Xia Chen},
-  doi           = {10.1214/16-AIHP756},
-  url           = {https://doi.org/10.1214/16-AIHP756}
-}
-@article{huang.le.ea:17:large*1,
-  author        = {Huang, Jingyu and L\^{e}, Khoa and Nualart, David},
   title         = {Large time asymptotics for the parabolic {A}nderson model driven by space and time correlated noise},
   journal       = {Stoch. Partial Differ. Equ. Anal. Comput.},
   fjournal      = {Stochastic Partial Differential Equations. Analysis and Computations},
@@ -29772,6 +29807,22 @@
   mrreviewer    = {Xia Chen},
   doi           = {10.1007/s40072-017-0099-0},
   url           = {https://doi.org/10.1007/s40072-017-0099-0}
+}
+@article{huang.le.ea:17:large*1,
+  author        = {Huang, Jingyu and L\^{e}, Khoa and Nualart, David},
+  title         = {Large time asymptotics for the parabolic {A}nderson model driven by spatially correlated noise},
+  journal       = {Ann. Inst. Henri Poincar\'{e} Probab. Stat.},
+  fjournal      = {Annales de l'Institut Henri Poincar\'{e} Probabilit\'{e}s et Statistiques},
+  volume        = {53},
+  year          = {2017},
+  number        = {3},
+  pages         = {1305--1340},
+  issn          = {0246-0203},
+  mrclass       = {60G15 (60F10 60H07 60H15 65M75)},
+  mrnumber      = {3689969},
+  mrreviewer    = {Xia Chen},
+  doi           = {10.1214/16-AIHP756},
+  url           = {https://doi.org/10.1214/16-AIHP756}
 }
 @article{huang.le:19:spatial,
   author        = {Huang, Jingyu and L\^{e}, Khoa},
@@ -37270,6 +37321,20 @@
   doi           = {10.1103/PhysRevA.41.983},
   url           = {https://link.aps.org/doi/10.1103/PhysRevA.41.983}
 }
+@article{meakin.ramanlal.ea:86:ballistic,
+  title         = {Ballistic deposition on surfaces},
+  author        = {Meakin, Paul and Ramanlal, P. and Sander, L. M. and Ball, R. C.},
+  journal       = {Phys. Rev. A},
+  volume        = {34},
+  issue         = {6},
+  pages         = {5091--5103},
+  numpages      = {0},
+  year          = {1986},
+  month         = {Dec},
+  publisher     = {American Physical Society},
+  doi           = {10.1103/PhysRevA.34.5091},
+  url           = {https://link.aps.org/doi/10.1103/PhysRevA.34.5091}
+}
 @article{medina.hwa.ea:89:burgers,
   author        = {Medina, Ernesto and Hwa, Terence and Kardar, Mehran and Zhang, Yi Cheng},
   title         = {Burgers' equation with correlated noise: renormalization-group analysis and applications to directed polymers and interface growth},
@@ -40374,19 +40439,7 @@
   doi           = {10.1016/j.spa.2005.10.007},
   url           = {https://doi.org/10.1016/j.spa.2005.10.007}
 }
-@book{nane:06:iterated*1,
-  author        = {Nane, Erkan},
-  title         = {Iterated {B}rownian motion: {L}ifetime asymptotics and isoperimetric-type inequalities},
-  note          = {Thesis (Ph.D.)--Purdue University},
-  publisher     = {ProQuest LLC, Ann Arbor, MI},
-  year          = {2006},
-  pages         = {47},
-  isbn          = {978-0542-86606-7},
-  mrclass       = {Thesis},
-  mrnumber      = {2709290},
-  url           = {http://gateway.proquest.com/openurl?url\_ver=Z39.88-2004\&rft\_val\_fmt=info:ofi/fmt:kev:mtx:dissertation\&res\_dat=xri:pqdiss\&rft\_dat=xri:pqdiss:3232219}
-}
-@article{nane:06:iterated*2,
+@article{nane:06:iterated*1,
   author        = {Nane, Erkan},
   title         = {Iterated {B}rownian motion in parabola-shaped domains},
   journal       = {Potential Anal.},
@@ -40401,6 +40454,18 @@
   mrreviewer    = {Endre Cs\'{a}ki},
   doi           = {10.1007/s11118-005-2611-9},
   url           = {https://doi.org/10.1007/s11118-005-2611-9}
+}
+@book{nane:06:iterated*2,
+  author        = {Nane, Erkan},
+  title         = {Iterated {B}rownian motion: {L}ifetime asymptotics and isoperimetric-type inequalities},
+  note          = {Thesis (Ph.D.)--Purdue University},
+  publisher     = {ProQuest LLC, Ann Arbor, MI},
+  year          = {2006},
+  pages         = {47},
+  isbn          = {978-0542-86606-7},
+  mrclass       = {Thesis},
+  mrnumber      = {2709290},
+  url           = {http://gateway.proquest.com/openurl?url\_ver=Z39.88-2004\&rft\_val\_fmt=info:ofi/fmt:kev:mtx:dissertation\&res\_dat=xri:pqdiss\&rft\_dat=xri:pqdiss:3232219}
 }
 @article{nane:06:laws,
   author        = {Nane, Erkan},
@@ -42394,6 +42459,19 @@
 }
 @article{nualart.sanz:85:malliavin,
   author        = {Nualart, D. and Sanz, M.},
+  title         = {Malliavin calculus for two-parameter processes},
+  journal       = {Ann. Sci. Univ. Clermont-Ferrand II Probab. Appl.},
+  fjournal      = {Annales Scientifiques de l'Universit\'{e} de Clermont-Ferrand II. Probabilit\'{e}s et Applications},
+  number        = {3},
+  year          = {1985},
+  pages         = {73--86},
+  issn          = {0246-1501},
+  mrclass       = {60H15 (60G60 60H07)},
+  mrnumber      = {790724},
+  mrreviewer    = {M. Zakai}
+}
+@article{nualart.sanz:85:malliavin*1,
+  author        = {Nualart, D. and Sanz, M.},
   title         = {Malliavin calculus for two-parameter {W}iener functionals},
   journal       = {Z. Wahrsch. Verw. Gebiete},
   fjournal      = {Zeitschrift f\"{u}r Wahrscheinlichkeitstheorie und Verwandte Gebiete},
@@ -42407,19 +42485,6 @@
   mrreviewer    = {M. Zakai},
   doi           = {10.1007/BF00531868},
   url           = {https://doi.org/10.1007/BF00531868}
-}
-@article{nualart.sanz:85:malliavin*1,
-  author        = {Nualart, D. and Sanz, M.},
-  title         = {Malliavin calculus for two-parameter processes},
-  journal       = {Ann. Sci. Univ. Clermont-Ferrand II Probab. Appl.},
-  fjournal      = {Annales Scientifiques de l'Universit\'{e} de Clermont-Ferrand II. Probabilit\'{e}s et Applications},
-  number        = {3},
-  year          = {1985},
-  pages         = {73--86},
-  issn          = {0246-1501},
-  mrclass       = {60H15 (60G60 60H07)},
-  mrnumber      = {790724},
-  mrreviewer    = {M. Zakai}
 }
 @article{nualart.sanz:89:stochastic,
   author        = {Nualart, D. and Sanz, M.},
@@ -43499,17 +43564,6 @@
 }
 @inproceedings{nualart:77:on,
   author        = {Nualart, David},
-  title         = {On the order convergence of stochastic processes},
-  booktitle     = {Proceedings of the {F}irst {S}panish-{P}ortuguese {M}athematical {C}onference ({M}adrid, 1973) ({S}panish)},
-  pages         = {647--655},
-  publisher     = {Consejo Sup. Inv. Cient., Madrid},
-  year          = {1977},
-  mrclass       = {60G17 (60G07)},
-  mrnumber      = {581116},
-  mrreviewer    = {Evarist Gin\'{e}}
-}
-@inproceedings{nualart:77:on*1,
-  author        = {Nualart, David},
   title         = {On the convergence of martingales},
   booktitle     = {Proceedings of the {F}irst {S}panish-{P}ortuguese {M}athematical {C}onference ({M}adrid, 1973) ({S}panish)},
   pages         = {638--646},
@@ -43518,6 +43572,17 @@
   mrclass       = {60G42},
   mrnumber      = {581115},
   mrreviewer    = {Dominique L\'{e}pingle}
+}
+@inproceedings{nualart:77:on*1,
+  author        = {Nualart, David},
+  title         = {On the order convergence of stochastic processes},
+  booktitle     = {Proceedings of the {F}irst {S}panish-{P}ortuguese {M}athematical {C}onference ({M}adrid, 1973) ({S}panish)},
+  pages         = {647--655},
+  publisher     = {Consejo Sup. Inv. Cient., Madrid},
+  year          = {1977},
+  mrclass       = {60G17 (60G07)},
+  mrnumber      = {581116},
+  mrreviewer    = {Evarist Gin\'{e}}
 }
 @incollection{nualart:79:decomposition,
   author        = {Nualart, David},
@@ -49289,22 +49354,6 @@
 }
 @article{seppalainen:93:large,
   author        = {Sepp\"{a}l\"{a}inen, Timo},
-  title         = {Large deviations for lattice systems. {II}. {N}onstationary independent fields},
-  journal       = {Probab. Theory Related Fields},
-  fjournal      = {Probability Theory and Related Fields},
-  volume        = {97},
-  year          = {1993},
-  number        = {1-2},
-  pages         = {103--112},
-  issn          = {0178-8051},
-  mrclass       = {60F10 (60G60)},
-  mrnumber      = {1240718},
-  mrreviewer    = {Francis Comets},
-  doi           = {10.1007/BF01199314},
-  url           = {https://doi.org/10.1007/BF01199314}
-}
-@article{seppalainen:93:large*1,
-  author        = {Sepp\"{a}l\"{a}inen, Timo},
   title         = {Large deviations for lattice systems. {I}. {P}arametrized independent fields},
   journal       = {Probab. Theory Related Fields},
   fjournal      = {Probability Theory and Related Fields},
@@ -49318,6 +49367,22 @@
   mrreviewer    = {Francis Comets},
   doi           = {10.1007/BF01192135},
   url           = {https://doi.org/10.1007/BF01192135}
+}
+@article{seppalainen:93:large*1,
+  author        = {Sepp\"{a}l\"{a}inen, Timo},
+  title         = {Large deviations for lattice systems. {II}. {N}onstationary independent fields},
+  journal       = {Probab. Theory Related Fields},
+  fjournal      = {Probability Theory and Related Fields},
+  volume        = {97},
+  year          = {1993},
+  number        = {1-2},
+  pages         = {103--112},
+  issn          = {0178-8051},
+  mrclass       = {60F10 (60G60)},
+  mrnumber      = {1240718},
+  mrreviewer    = {Francis Comets},
+  doi           = {10.1007/BF01199314},
+  url           = {https://doi.org/10.1007/BF01199314}
 }
 @article{seppalainen:94:large,
   author        = {Sepp\"{a}l\"{a}inen, Timo},
@@ -50832,21 +50897,6 @@
 }
 @article{talagrand:06:parisi,
   author        = {Talagrand, Michel},
-  title         = {Parisi measures},
-  journal       = {J. Funct. Anal.},
-  fjournal      = {Journal of Functional Analysis},
-  volume        = {231},
-  year          = {2006},
-  number        = {2},
-  pages         = {269--286},
-  issn          = {0022-1236},
-  mrclass       = {82B44 (28A33 82D30)},
-  mrnumber      = {2195333},
-  doi           = {10.1016/j.jfa.2005.03.001},
-  url           = {https://doi.org/10.1016/j.jfa.2005.03.001}
-}
-@article{talagrand:06:parisi*1,
-  author        = {Talagrand, Michel},
   title         = {The {P}arisi formula},
   journal       = {Ann. of Math. (2)},
   fjournal      = {Annals of Mathematics. Second Series},
@@ -50860,6 +50910,21 @@
   mrreviewer    = {Fran\c{c}ois Germinet},
   doi           = {10.4007/annals.2006.163.221},
   url           = {https://doi.org/10.4007/annals.2006.163.221}
+}
+@article{talagrand:06:parisi*1,
+  author        = {Talagrand, Michel},
+  title         = {Parisi measures},
+  journal       = {J. Funct. Anal.},
+  fjournal      = {Journal of Functional Analysis},
+  volume        = {231},
+  year          = {2006},
+  number        = {2},
+  pages         = {269--286},
+  issn          = {0022-1236},
+  mrclass       = {82B44 (28A33 82D30)},
+  mrnumber      = {2195333},
+  doi           = {10.1016/j.jfa.2005.03.001},
+  url           = {https://doi.org/10.1016/j.jfa.2005.03.001}
 }
 @article{talagrand:10:construction,
   author        = {Talagrand, Michel},
@@ -50879,20 +50944,6 @@
 }
 @book{talagrand:11:mean,
   author        = {Talagrand, Michel},
-  title         = {Mean field models for spin glasses. {V}olume {II}},
-  series        = {Ergebnisse der Mathematik und ihrer Grenzgebiete. 3. Folge. A Series of Modern Surveys in Mathematics [Results in Mathematics and Related Areas. 3rd Series. A Series of Modern Surveys in Mathematics]},
-  volume        = {55},
-  note          = {Advanced replica-symmetry and low temperature},
-  publisher     = {Springer, Heidelberg},
-  year          = {2011},
-  pages         = {xii+629},
-  isbn          = {978-3-642-22252-8; 978-3-642-22253-5},
-  mrclass       = {60F10 (60G15 60K35 82B44 82C32 92E10)},
-  mrnumber      = {3024566},
-  mrreviewer    = {Francis Comets}
-}
-@book{talagrand:11:mean*1,
-  author        = {Talagrand, Michel},
   title         = {Mean field models for spin glasses. {V}olume {I}},
   series        = {Ergebnisse der Mathematik und ihrer Grenzgebiete. 3. Folge. A Series of Modern Surveys in Mathematics [Results in Mathematics and Related Areas. 3rd Series. A Series of Modern Surveys in Mathematics]},
   volume        = {54},
@@ -50906,6 +50957,20 @@
   mrreviewer    = {Francis Comets},
   doi           = {10.1007/978-3-642-15202-3},
   url           = {https://doi.org/10.1007/978-3-642-15202-3}
+}
+@book{talagrand:11:mean*1,
+  author        = {Talagrand, Michel},
+  title         = {Mean field models for spin glasses. {V}olume {II}},
+  series        = {Ergebnisse der Mathematik und ihrer Grenzgebiete. 3. Folge. A Series of Modern Surveys in Mathematics [Results in Mathematics and Related Areas. 3rd Series. A Series of Modern Surveys in Mathematics]},
+  volume        = {55},
+  note          = {Advanced replica-symmetry and low temperature},
+  publisher     = {Springer, Heidelberg},
+  year          = {2011},
+  pages         = {xii+629},
+  isbn          = {978-3-642-22252-8; 978-3-642-22253-5},
+  mrclass       = {60F10 (60G15 60K35 82B44 82C32 92E10)},
+  mrnumber      = {3024566},
+  mrreviewer    = {Francis Comets}
 }
 @article{talagrand:94:sharper,
   author        = {Talagrand, M.},
@@ -54338,6 +54403,20 @@
   doi           = {10.1215/kjm/1250523691},
   url           = {https://doi.org/10.1215/kjm/1250523691}
 }
+@article{yan.kessler.ea:90:roughening,
+  title         = {Roughening phase transition in surface growth},
+  author        = {Yan, Hong and Kessler, David and Sander, L. M.},
+  journal       = {Phys. Rev. Lett.},
+  volume        = {64},
+  issue         = {8},
+  pages         = {926--929},
+  numpages      = {0},
+  year          = {1990},
+  month         = {Feb},
+  publisher     = {American Physical Society},
+  doi           = {10.1103/PhysRevLett.64.926},
+  url           = {https://link.aps.org/doi/10.1103/PhysRevLett.64.926}
+}
 @article{yang.wang.ea:22:elliptic,
   author        = {Yang, Saisai and Wang, Chen and Zhang, Tusheng},
   title         = {Elliptic equations associated with {B}rownian motion with singular drift},
@@ -55407,21 +55486,6 @@
   url           = {https://doi.org/10.1016/j.jde.2008.02.019}
 }
 @article{zhang:09:variational,
-  author        = {Zhang, Xicheng},
-  title         = {A variational representation for random functionals on abstract {W}iener spaces},
-  journal       = {J. Math. Kyoto Univ.},
-  fjournal      = {Journal of Mathematics of Kyoto University},
-  volume        = {49},
-  year          = {2009},
-  number        = {3},
-  pages         = {475--490},
-  issn          = {0023-608X},
-  mrclass       = {60H07 (60F10)},
-  mrnumber      = {2583599},
-  doi           = {10.1215/kjm/1260975036},
-  url           = {https://doi.org/10.1215/kjm/1260975036}
-}
-@article{zhang:09:variational*1,
   author        = {Zhang, Tusheng},
   title         = {Variational inequalities and optimization for {M}arkov processes associated with semi-{D}irichlet forms},
   journal       = {SIAM J. Control Optim.},
@@ -55436,6 +55500,21 @@
   mrreviewer    = {Arie Leizarowitz},
   doi           = {10.1137/080737630},
   url           = {https://doi.org/10.1137/080737630}
+}
+@article{zhang:09:variational*1,
+  author        = {Zhang, Xicheng},
+  title         = {A variational representation for random functionals on abstract {W}iener spaces},
+  journal       = {J. Math. Kyoto Univ.},
+  fjournal      = {Journal of Mathematics of Kyoto University},
+  volume        = {49},
+  year          = {2009},
+  number        = {3},
+  pages         = {475--490},
+  issn          = {0023-608X},
+  mrclass       = {60H07 (60F10)},
+  mrnumber      = {2583599},
+  doi           = {10.1215/kjm/1260975036},
+  url           = {https://doi.org/10.1215/kjm/1260975036}
 }
 @article{zhang:10:stochastic,
   author        = {Zhang, Xicheng},
